# GleanAI

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
bot/: README.md  package.json
bot/scripts/: smoke.js
bot/src/: bot.js  config.js  index.js  supabase.js
programs/: README.md
programs/glean-distributor/: Cargo.toml
programs/glean-distributor/src/: lib.rs
scripts/: build-distributor.sh  close-buffers.sh  deploy-devnet.sh  download-tools-api.sh  extract-tools.sh  fund-and-deploy.sh  init-distributor.mjs  install-only-tools.sh  install-platform-tools.sh  local-anchor-build.sh  parallel-dl.py  pow-fund.sh  publish-claim-epoch.mjs  run-init-distributor.sh  set-root.mjs  tools-sizes.py  try-faucets.sh
supabase/: README.md  seed.sql  seed_boss_gauntlet.sql  seed_wallet_wars.sql  setup_awdiegbknklmuxvqwewl.sql
supabase/migrations/: 0001_init.sql  0002_wallet_wars.sql  0003_fighter_armor.sql  0004_win_streak.sql  0005_wallet_receipts.sql  0006_receipt_cluster.sql  0007_boss_gauntlet.sql  0008_ghost_race.sql  0009_points_economics.sql  0010_claim_epochs.sql  0011_fighter_badge_mint.sql  0012_fighter_staking.sql
web/: README.md  package.json  tailwind.config.ts  test-out.txt  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/components/: BrandMark.tsx  ConnectButton.tsx  CrtPanel.tsx  GameModeCards.tsx  GamePreviews.tsx  HomeHeroCta.tsx  LandingSection.tsx  LiveStats.tsx  OpenSourceBar.tsx  PixelArt.tsx  ShareButton.tsx  TelegramCapture.tsx  TelegramProvider.tsx  Ticker.tsx  (+1 more)
(+214 files in other folders)
