[package]
name = "glean-distributor"
version = "0.1.0"
description = "GleanAI Merkle claim distributor (SPL only)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "glean_distributor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
